--- a/Hackathon/main.html
+++ b/Hackathon/main.html
@@ -1,10 +1,11 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel='stylesheet' href='css/styles.css'>
+    <link rel='stylesheet' href='{% css/styles.css %}'>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 </head>
 <body>
@@ -15,16 +16,16 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
           <div class="navbar-nav">
-            <a class="nav-item nav-link" href="login.html">Login</a>
-            <a class="nav-item nav-link" href="eval.html">강의 평가</a>
-            <a class="nav-item nav-link " href="board.html">게시판</a>
+            <a class="nav-item nav-link" href="{% url 'login.html' %}">Login</a>
+            <a class="nav-item nav-link" href="{% url 'eval.html' %}">강의 평가</a>
+            <a class="nav-item nav-link" href="{% url 'board.html' %}">게시판</a>
           </div>
         </div>
       </nav>
 
     <div class='contents'>
         <p>강의를 검색해보세요! 📝</p>
-            <form action = 'table.html'>
+            <form action = "{% url 'table.html' %}">
                 <div class='info1'>
                     <table border='1', width='500' height='200'>
                         <tr>
