--- a/Hackathon/board.html
+++ b/Hackathon/board.html
@@ -1,10 +1,11 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel='stylesheet' href='css/styles.css'>
+    <link rel='stylesheet' href="{% static 'css/styles.css' %}">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 </head>
 <body>
@@ -15,8 +16,8 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
           <div class="navbar-nav">
-            <a class="nav-item nav-link" href="main.html">Home</a>
-            <a class="nav-item nav-link" href="eval.html">강의 평가</a>
+            <a class="nav-item nav-link" href="{% url 'main.html' %}">Home</a>
+            <a class="nav-item nav-link" href="{% url 'eval.html' %}">강의 평가</a>
           </div>
         </div>
       </nav>
