--- a/Hackathon/eval.html
+++ b/Hackathon/eval.html
@@ -1,10 +1,11 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel='stylesheet' href='css/styles.css'>
+    <link rel='stylesheet' href='{% static "css/styles.css"%}'>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 </head>
 <body>
@@ -15,8 +16,8 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
           <div class="navbar-nav">
-            <a class="nav-item nav-link" href="main.html">Home</a>
-            <a class="nav-item nav-link " href="board.html">게시판</a>
+            <a class="nav-item nav-link" href="{% url 'main.html' %}">Home</a>
+            <a class="nav-item nav-link" href="{% url 'board.html' %}">게시판</a>
           </div>
         </div>
       </nav>
@@ -45,7 +46,7 @@
           autofocus
           required wrap="hard"
           placeholder="여기에 작성해주세요!"></textarea>
-          <form action='main.html'>
+          <form action='{% main.html %}'>
             <button type="submit" class='button'><h3>제출하기</h3></button>
           </form>
         </div>
@@ -64,6 +65,9 @@ $(".star").removeClass("on");
    }
  });
 </script>
+<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>      
 </body>
 
 
