--- a/Hackathon/signup.html
+++ b/Hackathon/signup.html
@@ -1,13 +1,14 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="ko">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=">
-    <link rel='stylesheet' href='css/login_signup.css'>
+    <link rel='stylesheet' href='{% css/login_signup.css %}'>
     <title></title>
 </head>
 <body>
-    <form action = 'login.html'>
+    <form action ="{% url 'main.html' %}">
     <div class="signup_form" >
         <h1>SIGN UP</h1>
         <div class='txtb'><input type="text" placeholder='아이디를 입력해주세요.'>
@@ -34,7 +35,7 @@
         </div>
   
         <input type='submit' class='signup_btn' value='SIGN UP'>
-        <div class="bottom-text"><a href='login.html'> 로그인으로 돌아가기</a>
+        <div class="bottom-text"><a href="{% url 'main.html' %}"> 로그인으로 돌아가기</a>
         </div>
     </div>
 </form>
